# openlr-lens

./: .gitignore  CLAUDE.md  Cargo.toml  DecodingSteps.md  Diagnosis.md  MCPImplementation.md  OpenLREngine.md  OpenLR_LLM_Context.md  PreProcessing.md  README.md  WebFrontend.md
crates/openlr-codec/: Cargo.toml
crates/openlr-codec/src/: decoder.rs  encoder.rs  interval.rs  lib.rs  lrp.rs
crates/openlr-codec/src/decoder/: tpeg.rs  v3.rs
crates/openlr-codec/src/encoder/: tpeg.rs  v3.rs
crates/openlr-encoder/: Cargo.toml
crates/openlr-encoder/src/: attributes.rs  coverage.rs  expansion.rs  lib.rs  line.rs  pal.rs
crates/openlr-encoder/tests/: real_map_round_trip.rs
crates/openlr-engine/: Cargo.toml
crates/openlr-engine/src/: astar.rs  candidate.rs  lib.rs  params.rs  route_generator.rs  tile_prefetch.rs  trace.rs  validation.rs  wkt.rs
crates/openlr-engine/tests/: de_decode.rs
crates/openlr-graph/: Cargo.toml
crates/openlr-graph/src/: geometry.rs  graph.rs  lib.rs  node.rs  path_search.rs  restriction.rs  segment.rs  tile.rs
crates/openlr-provider/: Cargo.toml
crates/openlr-provider/src/: lib.rs  pmtiles.rs  tile_reader.rs
crates/openlr-wasm/: Cargo.toml
crates/openlr-wasm/src/: lib.rs
pipeline/: Cargo.toml
pipeline/schema/: canonical_schema.sql  overture-default.toml
pipeline/src/: adapt.rs  build.rs  canonical_low_memory.rs  canonical_schema.rs  cli.rs  extent.rs  extract.rs  generic_extract.rs  http.rs  main.rs  merge.rs  osm_adapt.rs  osm_extract.rs  osm_low_memory.rs  parquet_meta.rs  partition.rs  quantize.rs  releases.rs  restrictions.rs  schema.rs  split.rs  tile.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: _redirects
web/src/: App.css  App.jsx  decoder.js  diagnosis.js  hooks.js  llmClient.js  llmDiagnosis.js  main.js  refFormat.js  renderLlmText.jsx  replayEngine.js  store.js  tileDecoder.js  tourSampleData.js  utils.js  wasm.js
web/src/components/: BottomBar.jsx  DocumentationPage.jsx  DocumentationPanel.jsx  LlmChatPanel.jsx  Map.jsx  MenuBar.jsx  OnboardingTour.jsx  ParamsPanel.jsx  ReplayPanel.jsx  ResultPanel.jsx  TopBar.jsx  TracePanel.jsx
web/src/docs/: userGuide.md
web/src/llm/: README.md  SYSTEM_PROMPT.md  systemPrompt.js  tools.js
