[package]
name    = "openlrlens-build"
edition.workspace = true
version.workspace = true

[[bin]]
name = "openlrlens-build"
path = "src/main.rs"

[dependencies]
openlr-graph = { path = "../crates/openlr-graph" }
anyhow.workspace   = true
serde.workspace    = true
tokio.workspace    = true
tracing.workspace  = true
clap             = { version = "4", features = ["derive"] }
serde_derive     = "1"
toml             = "0.8"
reqwest          = { version = "0.12", features = ["rustls-tls"], default-features = false }
quick-xml        = "0.37"
rayon            = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
duckdb           = { version = "1", features = ["bundled"] }
serde_json       = "1"
tempfile         = "3"
hex              = "0.4"
urlencoding      = "2"
flate2           = "1"
sysinfo          = { version = "0.30", default-features = false }
