[package]
name    = "openlr-encoder"
edition.workspace = true
version.workspace = true

[dependencies]
openlr-codec  = { path = "../openlr-codec" }
openlr-graph  = { path = "../openlr-graph" }
thiserror.workspace = true

[dev-dependencies]
openlr-provider = { path = "../openlr-provider" }
openlr-engine   = { path = "../openlr-engine" }
