[package]
name    = "openlr-engine"
edition.workspace = true
version.workspace = true

[dependencies]
openlr-codec  = { path = "../openlr-codec" }
openlr-graph  = { path = "../openlr-graph" }
serde.workspace     = true
thiserror.workspace = true

[dev-dependencies]
flate2 = "1"
openlr-provider = { path = "../openlr-provider" }
